basic structure / some css on EX2

--- a/Exercises/Ex2/index.html
+++ b/Exercises/Ex2/index.html
@@ -1,10 +1,57 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
+        <link rel = "stylesheet" href = "includes/style.css">
+        <title>Landing Page</title>
     </head>
 
     <body>
+        <header>
+            <a id="logo" href="#"><span id="logotext">Fadi Atamny</span></a>
+        </header>
+        <nav>
+            <a href="exercises/ex1/index.html">Ex1</a>
+            <a href="exercises/ex2/index.html">Ex2</a>
+            <a href="#">Ex3</a>
+            <a href="#">Ex4</a>
+            <a href="#">Ex5</a>
+        </nav>
 
+        <main>
+            <section class = "imgs-sec">
+                <img src ="/images/cover1.png">
+                <img src ="/images/cover2.png">
+                <img src ="/images/cover3.png">
+            </section>
+
+            <section class = "text-sec">
+                <h1>Fadi Atamny</h1>
+                <p>this page will be used to save and contain my progress within the web dev course</p>
+            </section>
+
+            <section class = "skills-sec">
+                <h2>Programing languages</h2>
+                <ul>
+                    <li><img src = "#"><span>Lang1</span></li>
+                    <li><img src = "#"><span>Lang1</span></li>
+                    <li><img src = "#"><span>Lang1</span></li>
+                    <li><img src = "#"><span>Lang1</span></li>
+                    <li><img src = "#"><span>Lang1</span></li>
+                </ul>
+            </section>
+        </main>
+
+        <footer>
+            <a href="#"></a>
+            <a href="#"></a>
+            <a href="#"></a>
+            <a href="#"></a>
+            <a href="#"></a>
+            <hr>
+            <a href=""><img src = "#"></a>
+            <a href=""><img src = "#"></a>
+            <a href=""><img src = "#"></a>
+            <a href=""><img src = "#"></a>
+        </footer>
     </body>
 </html>
