half way done with ex2
updated the css to include all basic needs required and the index.html to be working perfectly

--- a/Exercises/Ex2/index.html
+++ b/Exercises/Ex2/index.html
@@ -1,57 +1,65 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel = "stylesheet" href = "includes/style.css">
+        <link rel = "stylesheet" href="includes/style.css" >
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato" >
+        <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+
         <title>Landing Page</title>
     </head>
 
     <body>
         <header>
-            <a id="logo" href="#"><span id="logotext">Fadi Atamny</span></a>
+            <a id="logo" href="index.html"><span id="logotext">Fadi Atamny</span></a>
         </header>
         <nav>
-            <a href="exercises/ex1/index.html">Ex1</a>
-            <a href="exercises/ex2/index.html">Ex2</a>
+            <a href="#">Ex1</a>
+            <a href="#">Ex3</a>
             <a href="#">Ex3</a>
             <a href="#">Ex4</a>
-            <a href="#">Ex5</a>
+            <a href="https://github.com/fadiatamny">Github</a>
         </nav>
 
         <main>
-            <section class = "imgs-sec">
-                <img src ="/images/cover1.png">
-                <img src ="/images/cover2.png">
-                <img src ="/images/cover3.png">
+            <section class="imgs-section">
+                <img src ="./images/cover1.png">
+                <img src ="./images/cover2.png">
+                <img src ="./images/cover3.png">
             </section>
 
-            <section class = "text-sec">
+            <section class="text-section">
                 <h1>Fadi Atamny</h1>
-                <p>this page will be used to save and contain my progress within the web dev course</p>
+                <p><i>"Although my body is very limited, my mind is free to explore the universe"</i>-Stephen Hawking</p>
             </section>
 
-            <section class = "skills-sec">
+            <section class="skills-section">
                 <h2>Programing languages</h2>
                 <ul>
-                    <li><img src = "#"><span>Lang1</span></li>
-                    <li><img src = "#"><span>Lang1</span></li>
-                    <li><img src = "#"><span>Lang1</span></li>
-                    <li><img src = "#"><span>Lang1</span></li>
-                    <li><img src = "#"><span>Lang1</span></li>
+                    <li><i class="devicon-c-plain"></i><span>C</span></li>
+                    <li><i class="devicon-cplusplus-plain"></i><span>C++</span></li>
+                    <li><i class="devicon-csharp-plain"></i><span>C#</span></li>
+                    <li><i class="devicon-java-plain"></i><span>Java</span></li>
+                    <li><i class="devicon-html5-plain"></i><span>HTML 5</span></li>
+                    <li><i class="devicon-css3-plain"></i><span>CSS</span></li>
+                    <li><i class="devicon-javascript-plain"></i><span>JavaScript</span></li>
+                    <li><i class="devicon-python-plain"></i><span>Python</span></li>
                 </ul>
             </section>
         </main>
 
         <footer>
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
-            <hr>
-            <a href=""><img src = "#"></a>
-            <a href=""><img src = "#"></a>
-            <a href=""><img src = "#"></a>
-            <a href=""><img src = "#"></a>
+            <section class="links">
+                <a href="https://github.com/fadiatamny" class="gitbutton"><span>SEE OUR WORK</span></a>
+                <a href="https://www.youtube.com/user/PewDiePie">PewDiePie</a>
+                <a href="https://www.reddit.com/r/Catmemes/">Cat Memes</a>
+            </section>
+            <section class="border"></section>
+            <section class="medialinks">
+                <a href="https://www.facebook.com/Fadi.Atamny"><i class="devicon-facebook-plain"></i></a>
+                <a href="https://twitter.com/FadiAtamny"><i class="devicon-twitter-plain"></i></a>
+                <a href="https://plus.google.com/103055949747958511818"><i class="devicon-google-plain"></i></a>
+                <a href="https://github.com/fadiatamny"><i class="devicon-github-plain"></i></a>
+            </section>
         </footer>
     </body>
 </html>
