updated link to link to the ex1

--- a/Exercises/Ex2/index.html
+++ b/Exercises/Ex2/index.html
@@ -13,7 +13,7 @@
             <a id="logo" href="index.html"><span id="logotext">Fadi Atamny</span></a>
         </header>
         <nav>
-            <a href="#">Ex1</a>
+            <a href="exercises/ex1/index.html">Ex1</a>
             <a href="#">Ex3</a>
             <a href="#">Ex3</a>
             <a href="#">Ex4</a>
