--- a/Exercises/Ex2/index.html
+++ b/Exercises/Ex2/index.html
@@ -22,7 +22,7 @@
 
         <main>
             <section class="imgs-section">
-                <img src ="./images/cover1.png">
+                <img id="sideimage" src ="./images/cover1.png">
                 <img src ="./images/cover2.png">
                 <img src ="./images/cover3.png">
             </section>
