--- a/Exercises/Ex2/index.html
+++ b/Exercises/Ex2/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato" >
         <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 
-        <title>Landing Page</title>
+        <title>Fadi Atamny</title>
     </head>
 
     <body>
