fixes to target links

--- a/Exercises/Ex2/index.html
+++ b/Exercises/Ex2/index.html
@@ -15,11 +15,11 @@
                 <div class="clear"></div>
             </header>
             <nav>
-                <a href="exercises/ex1/index.html">Ex1</a>
-                <a href="#">Ex3</a>
-                <a href="#">Ex4</a>
-                <a href="#">Ex5</a>
-                <a href="https://github.com/fadiatamny">Github</a>
+                <a href="exercises/ex1/index.html" target="_blank">Ex1</a>
+                <a href="">Ex3</a>
+                <a href="">Ex4</a>
+                <a href="">Ex5</a>
+                <a href="https://github.com/fadiatamny" target="_blank">Github</a>
             </nav>
     
             <main>
@@ -46,24 +46,23 @@
                         <li><i class="devicon-css3-plain"></i><span>CSS</span></li>
                         <li><i class="devicon-javascript-plain"></i><span>JavaScript</span></li>
                         <li><i class="devicon-python-plain"></i><span>Python</span></li>
-                    </ul>
-                    
+                    </ul>                   
                 </section>
             </main>
         </div>
         <footer>
             <div class="Wrapper">
                 <section class="links">
-                        <a href="https://github.com/fadiatamny" class="gitbutton"><span>SEE OUR WORK</span></a>
-                        <a href="https://www.youtube.com/user/PewDiePie">PewDiePie</a>
-                        <a href="https://www.reddit.com/r/Catmemes/">Cat Memes</a>
+                        <a href="https://github.com/fadiatamny" target="_blank" class="gitbutton"><span>SEE OUR WORK</span></a>
+                        <a href="https://www.youtube.com/user/PewDiePie" target="_blank">PewDiePie</a>
+                        <a href="https://www.reddit.com/r/Catmemes/" target="_blank">Cat Memes</a>
                     </section>
                     <section class="border"></section>
                     <section class="medialinks">
-                        <a href="https://www.facebook.com/Fadi.Atamny"><i class="devicon-facebook-plain"></i></a>
-                        <a href="https://twitter.com/FadiAtamny"><i class="devicon-twitter-plain"></i></a>
-                        <a href="https://plus.google.com/103055949747958511818"><i class="devicon-google-plain"></i></a>
-                        <a href="https://github.com/fadiatamny"><i class="devicon-github-plain"></i></a>
+                        <a href="https://www.facebook.com/Fadi.Atamny" target="_blank"><i class="devicon-facebook-plain"></i></a>
+                        <a href="https://twitter.com/FadiAtamny" target="_blank"><i class="devicon-twitter-plain"></i></a>
+                        <a href="https://plus.google.com/103055949747958511818" target="_blank"><i class="devicon-google-plain"></i></a>
+                        <a href="https://github.com/fadiatamny" target="_blank"><i class="devicon-github-plain"></i></a>
                     </section>
             </div>
         </footer>
