--- a/Exercises/Ex2/index.html
+++ b/Exercises/Ex2/index.html
@@ -17,6 +17,7 @@
             </div>
         </header>
 
+        <div class="Wrapper">
             <nav>
                 <a href="exercises/ex1/index.html" target="_blank">Ex1</a>
                 <a href="">Ex3</a>
