tweaking of css and fixed links

--- a/Exercises/Ex2/index.html
+++ b/Exercises/Ex2/index.html
@@ -20,9 +20,9 @@
         <div class="Wrapper">
             <nav>
                 <a href="exercises/ex1/index.html" target="_blank">Ex1</a>
-                <a href="">Ex3</a>
-                <a href="">Ex4</a>
-                <a href="">Ex5</a>
+                <a href="#">Ex3</a>
+                <a href="#">Ex4</a>
+                <a href="#">Ex5</a>
                 <a href="https://github.com/fadiatamny" target="_blank">Github</a>
             </nav>
     
@@ -59,14 +59,16 @@
                 <section class="links">
                         <a href="https://github.com/fadiatamny" target="_blank" class="gitbutton"><span>SEE OUR WORK</span></a>
                         <a href="https://www.youtube.com/user/PewDiePie" target="_blank">PewDiePie</a>
-                        <a href="https://www.reddit.com/r/Catmemes/" target="_blank">Cat Memes</a>
+                        <a href="https://www.reddit.com/r/Catmemes/" target="_blank">Cats</a>
+                        <a href="https://www.reddit.com/r/CatSlaps/" target="_blank">Are</a>
+                        <a href="https://www.reddit.com/r/catbellies/" target="_blank">Amazing</a>
+                        <a href="https://www.reddit.com/r/cats/" target="_blank">!</a>
                     </section>
                     <section class="border"></section>
                     <section class="medialinks">
                         <a href="https://www.facebook.com/Fadi.Atamny" target="_blank"><i class="devicon-facebook-plain"></i></a>
                         <a href="https://twitter.com/FadiAtamny" target="_blank"><i class="devicon-twitter-plain"></i></a>
                         <a href="https://plus.google.com/103055949747958511818" target="_blank"><i class="devicon-google-plain"></i></a>
-                        <a href="https://github.com/fadiatamny" target="_blank"><i class="devicon-github-plain"></i></a>
                     </section>
             </div>
         </footer>
