--- a/Exercises/Ex2/index.html
+++ b/Exercises/Ex2/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel = "stylesheet" href="includes/style.css" >
+        <link rel = "stylesheet" href="./includes/style.css" >
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato" >
         <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 
@@ -11,14 +11,14 @@
     <body>
         <header>
             <div class="Wrapper">
-                <a id="logo" href="index.html"><span id="logotext">Fadi Atamny</span></a>
+                <a id="logo" href="./index.html"><span id="logotext">Fadi Atamny</span></a>
                 <div class="clear"></div>
             </div>
         </header>
 
         <div class="Wrapper">
             <nav>
-                <a href="exercises/ex1/index.html" target="_blank">Ex1</a>
+                <a href="./exercises/ex1/index.html" target="_blank">Ex1</a>
                 <a href="#">Ex3</a>
                 <a href="#">Ex4</a>
                 <a href="#">Ex5</a>
