progress on layout3

--- a/Exercises/Ex3/layout3.html
+++ b/Exercises/Ex3/layout3.html
@@ -4,7 +4,27 @@
         <link rel="stylesheet" href="./includes/style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     </head>
-    <body>
+    <body id="lay3">
+        <header>
+            <div class="box"></div>
+        </header>
+        <nav>
+            <ul>
+                <li><a href="./index.html">MIX</a></li>
+                <li><a href="./layout2.html">STAIRS</a></li>
+                <li><a href="./layout3.html">DYNAMIC</a></li>
+            </ul>
+        </nav>
+        <main>
 
+        </main>
+        <aside>
+            
+        </aside>
+        <div class="clear"></div>
+        <section class="block"></section>
+        <footer>
+            
+        </footer>
     </body>
 </html>
