--- a/Exercises/Ex3/layout3.html
+++ b/Exercises/Ex3/layout3.html
@@ -4,19 +4,24 @@
         <link rel="stylesheet" href="./includes/style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     </head>
-    <body id="lay3">
+    <body id="layout3">
         <header>
-            <div class="box"></div>
+            <a class="button" onClick="generateBoxes()"></a>
+            <div class="clear"></div>
         </header>
-        <nav>
-            <ul>
-                <li><a href="./index.html">MIX</a></li>
-                <li><a href="./layout2.html">STAIRS</a></li>
-                <li><a href="./layout3.html">DYNAMIC</a></li>
-            </ul>
-        </nav>
+        <div class="main-nav">
+            <nav>
+                <ul>
+                    <li><a href="./index.html">MIX</a></li>
+                    <li><a href="./layout2.html">STAIRS</a></li>
+                    <li><a href="./layout3.html">DYNAMIC</a></li>
+                </ul>
+            </nav>
+        </div>
         <main>
-
+            <section id="js-boxshow">
+                <div class="clear"></div>
+            </section>
         </main>
         <aside>
             
@@ -27,4 +32,5 @@
             
         </footer>
     </body>
+    <script src="./includes/main.js"></script>
 </html>
