--- a/Exercises/Ex3/index.html
+++ b/Exercises/Ex3/index.html
@@ -1,51 +1,48 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="./includes/style.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-    </head>
-    <body>
-        <header>
-            <div class="wrapper">
-                <nav>
-                    <ul>
-                        <li><a href="./index.html">MIX</a></li>
-                        <li><a href="./layout2.html">STAIRS</a></li>
-                        <li><a href="./layout3.html">DYNAMIC</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </header>
-        <div class="wrapper">
-            <main>
-                <section class="text">
-                    <h1>- M I X</h1>
-                    <h3> Mix layout for any creative idea </h3>
-                </section>
-                <section class="rects">
-                    <div class="rect1"></div>
-                    <div class="rect2"></div>
-                    <div class="rect3"></div>
-                    <div class="rect4"></div>
-                    <div class="rect5"></div>
-                    <div class="rect6"></div>
-                    <div class="rect7"></div>
-                    <div class="rect8"></div>
-                    <div class="rect9"></div>
-                    <div class="rect10"></div>
-                    <div class="rect11"></div>
-                    <div class="rect12"></div>
-                    <div class="rect13"></div>
-                    <div class="rect14"></div>
-                    <div class="rect15"></div>
-                </section>
 
-                <div class="clear"></div>
-            </main>
-        </div>
+<head>
+    <link rel="stylesheet" href="./includes/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+</head>
 
-        <footer>
+<body id="layout1">
+    <header>
+        <nav>
+            <ul>
+                <li><a href="./index.html">MIX</a></li>
+                <li><a href="./layout2.html">STAIRS</a></li>
+                <li><a href="./layout3.html">DYNAMIC</a></li>
+            </ul>
+        </nav>
+    </header>
 
-        </footer>
-    </body>
+    <div class="wrapper">
+        <main>
+            <section class="text">
+                <h1>- M I X</h1>
+                <h3> Mix layout for any creative idea </h3>
+            </section>
+            <section class="boxes">
+                <div class="box1"></div>
+                <div class="box2"></div>
+                <div class="box3"></div>
+                <div class="box4"></div>
+                <div class="box5"></div>
+                <div class="box6"></div>
+                <div class="box7"></div>
+                <div class="box8"></div>
+                <div class="box9"></div>
+                <div class="box10"></div>
+                <div class="box11"></div>
+                <div class="box12"></div>
+                <div class="box13"></div>
+                <div class="box14"></div>
+                <div class="box15"></div>
+            </section>
+        </main>
+    </div>
+    <footer></footer>
+</body>
+
 </html>
