--- a/Exercises/Ex3/layout2.html
+++ b/Exercises/Ex3/layout2.html
@@ -1,51 +1,57 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="./includes/style.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-    </head>
-    <body id="lay2">
-        <header>
-            <div class="wrapper">
-                <nav>
-                    <ul>
-                        <li><a href="./index.html">MIX</a></li>
-                        <li><a href="./layout2.html">STAIRS</a></li>
-                        <li><a href="./layout3.html">DYNAMIC</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </header>
-        <div class="wrapper">
-            <main>
-                <section class=" rects1">
-                    <div class="rect"></div>
-                    <div class="rect"></div>
-                    <div class="rect"></div>
-                    <div class="rect"></div>
-                    <div class="rect"></div>
-                </section>
 
-                <section class="rects2">
-                    <div class="rect"></div>
-                    <div class="rect"></div>
-                    <div class="rect"></div>
-                    <div class="rect"></div>
-                    <div class="rect"></div>
-                </section>
-                <div class="clear"></div>
-            </main>
+<head>
+    <link rel="stylesheet" href="./includes/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+</head>
+
+<body id="layout2">
+    <header>
+        <nav>
+            <ul>
+                <li><a href="./index.html">MIX</a></li>
+                <li><a href="./layout2.html">STAIRS</a></li>
+                <li><a href="./layout3.html">DYNAMIC</a></li>
+            </ul>
+        </nav>
+    </header>
+    
+        <main>
+                <div class="wrapper">
+            <section class="boxes1">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </section>
+            <section class="boxes2">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </section>
+            <div class="clear"></div>
         </div>
-        <aside>
-            <div class="srect1"></div>
-            <div class="srect2"></div>
-            <div class="srect3"></div>
-            <p>FADI</p>
-        </aside>      
-        <div class="clear"></div>
 
-        <footer>
+        </main>
 
-        </footer>
-    </body>
+    <aside>
+        <div class="side1"></div>
+        <div class="side2"></div>
+        <div class="side3"></div>
+        <ul>
+            <li><a href="">F</a></li>
+            <li><a href="">A</a></li>
+            <li><a href="">D</a></li>
+            <li><a href="">I</a></li>
+        </ul>
+    </aside>
+    
+    <div class="clear"></div>
+    <footer></footer>
+</body>
+
 </html>
