Game works properly.

--- a/Exercises/Ex3/layout2.html
+++ b/Exercises/Ex3/layout2.html
@@ -10,9 +10,9 @@
     <header>
         <nav>
             <ul>
-                <li><a href="./index.html">MIX</a></li>
-                <li><a href="./layout2.html">STAIRS</a></li>
-                <li><a href="./layout3.html">DYNAMIC</a></li>
+                <li><a href="./index.html"><span>MIX</a></span></li>
+                <li><a class="selected" href="./layout2.html"><span>STAIRS</a></span></li>
+                <li><a href="./layout3.html"><span>DYNAMIC</a></span></li>
             </ul>
         </nav>
     </header>
