--- a/Exercises/Ex3/layout3.html
+++ b/Exercises/Ex3/layout3.html
@@ -12,9 +12,9 @@
         <div class="main-nav">
             <nav>
                 <ul>
-                    <li><a href="./index.html">MIX</a></li>
-                    <li><a href="./layout2.html">STAIRS</a></li>
-                    <li><a href="./layout3.html">DYNAMIC</a></li>
+                    <li><a href="./index.html"><span>MIX</a></span></li>
+                    <li><a href="./layout2.html"><span>STAIRS</a></span></li>
+                    <li><a class="selected" href="./layout3.html"><span>DYNAMIC</a></span></li>
                 </ul>
             </nav>
         </div>
