added links and querries for larger displays.

--- a/Exercises/Ex3/layout2.html
+++ b/Exercises/Ex3/layout2.html
@@ -43,10 +43,10 @@
         <div class="side2"></div>
         <div class="side3"></div>
         <ul>
-            <li><a href="">F</a></li>
-            <li><a href="">A</a></li>
-            <li><a href="">D</a></li>
-            <li><a href="">I</a></li>
+            <li><a href="https://www.reddit.com/r/cats/" target="_blank">F</a></li>
+            <li><a href="https://www.reddit.com/r/aww/" target="_blank">A</a></li>
+            <li><a href="https://www.reddit.com/r/rarepuppers/" target="_blannk">D</a></li>
+            <li><a href="https://www.reddit.com/r/tifu/" target="_blank">I</a></li>
         </ul>
     </aside>
     
