updated link to EX3

--- a/Exercises/Ex2/index.html
+++ b/Exercises/Ex2/index.html
@@ -19,7 +19,7 @@
         <div class="Wrapper">
             <nav>
                 <a href="./exercises/ex1/index.html" target="_blank">Ex1</a>
-                <a href="#">Ex3</a>
+                <a href="./exercises/ex3/index.html" target="_blank">Ex3</a>
                 <a href="#">Ex4</a>
                 <a href="#">Ex5</a>
                 <a href="https://github.com/fadiatamny" target="_blank">Github</a>
