fixed nav/ aside growth with main.
Still a bug with mobile view of it.

--- a/Exercises/Ex3/layout3.html
+++ b/Exercises/Ex3/layout3.html
@@ -10,7 +10,7 @@
             <a class="button" onClick="generateBoxes()"></a>
             <div class="clear"></div>
         </header>
-        <div class="main-nav">
+        <div id="nav" class="main-nav">
             <nav>
                 <ul>
                     <li><a href="./index.html"><span>MIX</a></span></li>
@@ -19,12 +19,12 @@
                 </ul>
             </nav>
         </div>
-        <main>
+        <main id="main">
             <section id="js-boxshow">
                 <div class="clear"></div>
             </section>
         </main>
-        <aside>
+        <aside id="aside">
             
         </aside>
         <div class="clear"></div>
