fixed growth of main and nav

--- a/Exercises/Ex3/layout3.html
+++ b/Exercises/Ex3/layout3.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./includes/style.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-    </head>
-    <body id="layout3">
+
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./includes/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+</head>
+
+<body id="layout3">
+    <div class="main">
         <header>
             <a class="button" onClick="generateBoxes()"></a>
             <div class="clear"></div>
@@ -25,13 +28,15 @@
             </section>
         </main>
         <aside id="aside">
-            
+
         </aside>
         <div class="clear"></div>
-        <section class="block"></section>
-        <footer>
-            
-        </footer>
-    </body>
-    <script src="./includes/main.js"></script>
+    </div>
+    <section class="block"></section>
+    <footer>
+
+    </footer>
+</body>
+<script src="./includes/main.js"></script>
+
 </html>
