fixed random letters

--- a/Exercises/Ex3/layout3.html
+++ b/Exercises/Ex3/layout3.html
@@ -8,11 +8,11 @@
 </head>
 
 <body id="layout3">
+    <header>
+        <a class="button" onClick="generateBoxes()"></a>
+        <div class="clear"></div>
+    </header>
     <div class="main">
-        <header>
-            <a class="button" onClick="generateBoxes()"></a>
-            <div class="clear"></div>
-        </header>
         <div id="nav" class="main-nav">
             <nav>
                 <ul>
@@ -22,7 +22,7 @@
                 </ul>
             </nav>
         </div>
-        <main id="main">
+        <main id="box-container">
             <section id="js-boxshow">
                 <div class="clear"></div>
             </section>
