fancy dot animation with js + ordering of code

--- a/Exercises/Ex3/index.html
+++ b/Exercises/Ex3/index.html
@@ -10,9 +10,9 @@
     <header>
         <nav>
             <ul>
-                <li><a class="selected" href="./index.html"><span>MIX</a></span></li>
-                <li><a href="./layout2.html"><span>STAIRS</a></span></li>
-                <li><a href="./layout3.html"><span>DYNAMIC</a></span></li>
+                <li><a class="btn selected" href="./index.html"><span>MIX</a></span></li>
+                <li><a class="btn" href="./layout2.html"><span>STAIRS</a></span></li>
+                <li><a class="btn last" href="./layout3.html"><span>DYNAMIC</a></span></li>
             </ul>
         </nav>
     </header>
@@ -44,5 +44,5 @@
     </div>
     <footer></footer>
 </body>
-
+<script src="./includes/dot.js"></script>
 </html>
