--- a/Exercises/Ex3/layout2.html
+++ b/Exercises/Ex3/layout2.html
@@ -10,9 +10,9 @@
     <header>
         <nav>
             <ul>
-                <li><a href="./index.html"><span>MIX</a></span></li>
-                <li><a class="selected" href="./layout2.html"><span>STAIRS</a></span></li>
-                <li><a href="./layout3.html"><span>DYNAMIC</a></span></li>
+                <li><a class="btn" href="./index.html"><span>MIX</a></span></li>
+                <li><a class="btn selected" href="./layout2.html"><span>STAIRS</a></span></li>
+                <li><a class="btn last" href="./layout3.html"><span>DYNAMIC</a></span></li>
             </ul>
         </nav>
     </header>
@@ -53,5 +53,5 @@
     <div class="clear"></div>
     <footer></footer>
 </body>
-
+<script src="./includes/dot.js"></script>
 </html>
