--- a/Exercises/Ex3/layout3.html
+++ b/Exercises/Ex3/layout3.html
@@ -8,7 +8,7 @@
 </head>
 
 <body id="layout3">
-    <header>
+    <header class="wrapper">
         <a class="button" onClick="generateBoxes()"></a>
         <div class="clear"></div>
     </header>
@@ -16,9 +16,9 @@
         <div id="nav" class="main-nav">
             <nav>
                 <ul>
-                    <li><a href="./index.html"><span>MIX</a></span></li>
-                    <li><a href="./layout2.html"><span>STAIRS</a></span></li>
-                    <li><a class="selected" href="./layout3.html"><span>DYNAMIC</a></span></li>
+                    <li><a class="btn" href="./index.html"><span>MIX</a></span></li>
+                    <li><a class="btn" href="./layout2.html"><span>STAIRS</a></span></li>
+                    <li><a class="btn last selected" href="./layout3.html"><span>DYNAMIC</a></span></li>
                 </ul>
             </nav>
         </div>
@@ -37,6 +37,7 @@
 
     </footer>
 </body>
+<script src="./includes/dot.js"></script>
 <script src="./includes/main.js"></script>
 
 </html>
