--- a/Exercises/Ex3/layout3.html
+++ b/Exercises/Ex3/layout3.html
@@ -12,7 +12,7 @@
         <a class="button" onClick="generateBoxes()"></a>
         <div class="clear"></div>
     </header>
-    <div class="main">
+    <div class="main wrapper">
         <div id="nav" class="main-nav">
             <nav>
                 <ul>
