--- a/Exercises/Ex3/layout3.html
+++ b/Exercises/Ex3/layout3.html
@@ -38,6 +38,6 @@
     </footer>
 </body>
 <script src="./includes/dot.js"></script>
-<script src="./includes/main.js"></script>
+<script src="./includes/game.js"></script>
 
 </html>
