removed unused css

--- a/Exercises/Ex3/layout3.html
+++ b/Exercises/Ex3/layout3.html
@@ -8,11 +8,11 @@
 </head>
 
 <body id="layout3">
-    <header class="wrapper">
+    <header>
         <a class="button" onClick="generateBoxes()"></a>
         <div class="clear"></div>
     </header>
-    <div class="main wrapper">
+    <div class="main">
         <div id="nav" class="main-nav">
             <nav>
                 <ul>
