added titels for pages

--- a/Exercises/Ex3/index.html
+++ b/Exercises/Ex3/index.html
@@ -4,6 +4,8 @@
 <head>
     <link rel="stylesheet" href="./includes/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+
+    <title>Mix</title>
 </head>
 
 <body id="layout1">
