--- a/Exercises/Ex3/layout2.html
+++ b/Exercises/Ex3/layout2.html
@@ -4,6 +4,8 @@
 <head>
     <link rel="stylesheet" href="./includes/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+
+    <title>Stairs</title>
 </head>
 
 <body id="layout2">
