--- a/Exercises/Project/index.html
+++ b/Exercises/Project/index.html
@@ -1,16 +1,139 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="include/style.css">
-    </head>
-    <body>
-        <nav class="sticky">
-            <a href="#head"><img src="img/blacklogo.png" alt="KittyPaw" class="blacklogo"></a>
-            <ul class="main-nav">
-                <li><a href="#pics">Pics!</a></li>
-                <li><a href="#vids">Vids!</a></li>
-                <li><a href="#info">Info</a></li>
-            </ul>
-        </nav>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="description"
+        content="Kitties is the Worlds BEST place to find all the furry fluffies you love all in one intutivly designed place.">
+
+    <meta name="viewport" content="width=device-width, inital-scale=1.0">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <link href="./include/animate.css" rel="stylesheet">
+    <link href="./include/landing.css" rel="stylesheet">
+
+    <title>Kitty Planet</title>
+
+</head>
+
+
+<body>
+
+    <header id="head">
+        <nav>
+            <nav class="navbar sticky-top  navbar-expand-lg navbar-light">
+                <img src="images/logo.png" alt="KittyPaw" class="logo">
+                <a class="navbar-brand" href="#head"><img src="images/blacklogo.png" alt="KittyPaw"
+                        class="blacklogo"></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#list"
+                    aria-controls="list" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="list">
+                    <ul class="navbar-nav mr-auto">
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About us</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+
+            <div class="slogan-text-box">
+                <h1>All the fluffs in the world,<br> in a click of a button.</h1>
+                <a class="button btnAni" id="scrollBtn" href="#">Click Mew !</a>
+            </div>
+    </header>
+
+    <section class="pics-features">
+        <div class="container-fluid">
+            <div class="row justify-content-center">
+                <h2 id="pics">Are you ready for cuteness ?!</h2>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <figure class="cat-pic">
+                        <img src="images/1.jpg" alt="cat1">
+                    </figure>
+                </div>
+                <div class="col">
+                    <figure class="cat-pic">
+                        <img src="images/2.jpg" alt="cat2">
+                    </figure>
+                </div>
+                <div class="col">
+                    <figure class="cat-pic">
+                        <img src="images/3.jpg" alt="cat3">
+                    </figure>
+                </div>
+                <div class="col">
+                    <figure class="cat-pic">
+                        <img src="images/4.jpg" alt="cat4">
+                    </figure>
+                </div>
+                
+                <div class="row">
+                    <div class="col">
+                        <figure class="cat-pic">
+                            <img src="images/1.jpg" alt="cat1">
+                        </figure>
+                    </div>
+                    <div class="col">
+                        <figure class="cat-pic">
+                            <img src="images/2.jpg" alt="cat2">
+                        </figure>
+                    </div>
+                    <div class="col">
+                        <figure class="cat-pic">
+                            <img src="images/3.jpg" alt="cat3">
+                        </figure>
+                    </div>
+                    <div class="col">
+                        <figure class="cat-pic">
+                            <img src="images/4.jpg" alt="cat4">
+                        </figure>
+                    </div>
+                </div>
+            </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <div class="row justify-content-center">
+                <a class="button btnAni" href="#">Ready to adopt?!</a>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <div class="row justify-content-center">
+                <p>PLS ADOPT MORE PLS. PLS.</p>
+            </div>
+        </div>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script language="JavaScript" type="text/javascript" src="include/jquery.waypoints.min.js"></script>
+    <script language="JavaScript" type="text/javascript" src="include/script.js"></script>
+
+</body>
+
 </html>
