--- a/KittyHaven/index.html
+++ b/KittyHaven/index.html
@@ -24,8 +24,8 @@
     <header id="head">
         <nav>
             <nav class="navbar sticky-top  navbar-expand-lg navbar-light">
-                <img src="images/logo.png" alt="KittyPaw" class="logo">
-                <a class="navbar-brand" href="#head"><img src="images/blacklogo.png" alt="KittyPaw"
+                <img src="/images/logo.png" alt="KittyPaw" class="logo">
+                <a class="navbar-brand" href="#head"><img src="/images/blacklogo.png" alt="KittyPaw"
                         class="blacklogo"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#list"
                     aria-controls="list" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,7 +37,7 @@
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Login</a>
+                            <a class="nav-link" href="login.php">Login</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">About us</a>
@@ -60,44 +60,44 @@
             <div class="row">
                 <div class="col">
                     <figure class="cat-pic">
-                        <img src="images/1.jpg" alt="cat1">
+                        <img src="/images/1.jpg" alt="cat1">
                     </figure>
                 </div>
                 <div class="col">
                     <figure class="cat-pic">
-                        <img src="images/2.jpg" alt="cat2">
+                        <img src="/images/2.jpg" alt="cat2">
                     </figure>
                 </div>
                 <div class="col">
                     <figure class="cat-pic">
-                        <img src="images/3.jpg" alt="cat3">
+                        <img src="/images/3.jpg" alt="cat3">
                     </figure>
                 </div>
                 <div class="col">
                     <figure class="cat-pic">
-                        <img src="images/4.jpg" alt="cat4">
+                        <img src="/images/4.jpg" alt="cat4">
                     </figure>
                 </div>
                 
                 <div class="row">
                     <div class="col">
                         <figure class="cat-pic">
-                            <img src="images/1.jpg" alt="cat1">
+                            <img src="/images/1.jpg" alt="cat1">
                         </figure>
                     </div>
                     <div class="col">
                         <figure class="cat-pic">
-                            <img src="images/2.jpg" alt="cat2">
+                            <img src="/images/2.jpg" alt="cat2">
                         </figure>
                     </div>
                     <div class="col">
                         <figure class="cat-pic">
-                            <img src="images/3.jpg" alt="cat3">
+                            <img src="/images/3.jpg" alt="cat3">
                         </figure>
                     </div>
                     <div class="col">
                         <figure class="cat-pic">
-                            <img src="images/4.jpg" alt="cat4">
+                            <img src="/images/4.jpg" alt="cat4">
                         </figure>
                     </div>
                 </div>
