added loading icon while waiting for results

--- a/Exercises/Ex4/terminal.html
+++ b/Exercises/Ex4/terminal.html
@@ -69,13 +69,10 @@
         </div>
         <div class="typewriter wrapper par4 hidden">
             <h1>
-                or dont >.< please dont. 
-            </h1> 
-        </div> 
-        <div class="typewriter wrapper par5 hidden">
-            <h1>
-                since we trust each other, whats your darkest secret?
-            </h1>
+                or dont >.< please dont. </h1> </div> <div class="typewriter wrapper par5 hidden">
+                    <h1>
+                        since we trust each other, whats your darkest secret?
+                    </h1>
         </div>
         <div class="typewriter wrapper par6 hidden">
             <h1>
@@ -149,8 +146,25 @@
         <div class="typewriter wrapper par5 hidden">
             <h1>
                 i wont be gone too long :D </h1>
+                <div id="loading">
+                        <svg  x="0px" y="0px" viewBox="-215 1135 100 100" xml:space="preserve" class="logo_svg" id="the_logo">          
+                            <g id="house">
+                              <polygon class="hbg" fill="#CEDA2B" points="-164.8,1135 -214.5,1163.6 -214.5,1240.8 -114.8,1240.8 -114.8,1163.6   "></polygon>
+                              <polygon class="hbg2" fill="#CEDA2B" points="-164.8,1135 -214.5,1163.6 -214.5,1240.8 -114.8,1240.8 -114.8,1163.6   "></polygon>
+                              <path class="svgh1" fill="#A2C63A" d="M-114.8,1239.3l-17.8-38.6c-42.1-25.1-81.9-8.3-81.9-8.3v48.4h99.7V1239.3z"></path>
+                              <path class="svgh2" fill="#87B740" d="M-114.8,1194.6c-51.9,0.1-78.4,23.6-78.4,23.6l21.6,22.6h56.8V1194.6z"></path>
+                              <path class="svgh3" fill="#6AA543" d="M-142.1,1240.8c-29.3-23.7-48.8-27.2-72.5-25.7v25.7H-142.1z"></path>
+                            </g>
+                            </svg>
+                            <svg  x="0px" y="0px" viewBox="-215 1135 100 100" xml:space="preserve" class="logo_svg" id="the_logo2">          
+                            <g id="house2">            
+                              <polygon class="hbg2" fill="#CEDA2B" points="-164.8,1135 -214.5,1163.6 -214.5,1240.8 -114.8,1240.8 -114.8,1163.6   "></polygon>
+                            </g>
+                            </svg>
+                        </div>
+                  
         </div>
-        <div class="typewriter wrapper par6 hidden">
+        <div class="typewriter wrapper par7 hidden">
             <h1>
                 <a href="#" onclick="submit()">RESULTS TIME BABY !</a>
             </h1>
