--- a/Exercises/Ex4/terminal.html
+++ b/Exercises/Ex4/terminal.html
@@ -69,7 +69,7 @@
         </div>
         <div class="typewriter wrapper par4 hidden">
             <h1>
-                or dont >.< please dont. </h1> </div> <div class="typewriter wrapper par5 hidden">
+                or dont &#62;.&#60; please dont. </h1> </div> <div class="typewriter wrapper par5 hidden">
                     <h1>
                         since we trust each other, whats your darkest secret?
                     </h1>
