fixed svg width based on screensize

--- a/Exercises/Ex4/terminal.html
+++ b/Exercises/Ex4/terminal.html
@@ -15,7 +15,7 @@
 
 <body>
     <div class="background">
-        <svg viewBox='0 0 1600 900'>
+        <svg viewBox='0 0 1440 831' class="svgBG">
             <rect fill='#ff7700' width='100vw' height='100vh' />
             <polygon fill='#cc0000' points='957 450 539 900 1396 900' />
             <polygon fill='#aa0000' points='957 450 872.9 900 1396 900' />
@@ -298,7 +298,7 @@ c17 -21 46 -46 65 -55 68 -35 182 -16 231 39 41 45 48 85 48 283 l0 190 90 0
     </div>
 
     <script>
-        setTimeout(function () { $('#user').removeClass('hidden'); $('#user').focus(); }, 1000);
+        setTimeout(function () { $('#user').removeClass('hidden'); $('#user').focus(); }, 1300);
     </script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
