admin page + responsive ex4

--- a/KittyHaven/index.html
+++ b/KittyHaven/index.html
@@ -24,9 +24,8 @@
     <header id="head">
         <nav>
             <nav class="navbar sticky-top  navbar-expand-lg navbar-light">
-                <img src="./images/logo.png" alt="KittyPaw" class="logo">
-                <a class="navbar-brand" href="#head"><img src="./images/blacklogo.png" alt="KittyPaw"
-                        class="blacklogo"></a>
+                <a href="#" id="logo"></a>
+                <a class="navbar-brand" href="#head"><a href="#" id="blacklogo" class="hide"></a></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#list"
                     aria-controls="list" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -132,7 +131,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script language="JavaScript" type="text/javascript" src="include/jquery.waypoints.min.js"></script>
-    <script language="JavaScript" type="text/javascript" src="include/script.js"></script>
+    <script language="JavaScript" type="text/javascript" src="include/landing.js"></script>
 
 </body>
 
