fixed cat list section and added backend testing

--- a/KittyHaven/index.html
+++ b/KittyHaven/index.html
@@ -25,7 +25,7 @@
         <nav>
             <nav class="navbar sticky-top  navbar-expand-lg navbar-light">
                 <a href="#" id="logo"></a>
-                <a class="navbar-brand" href="#head"><a href="#" id="blacklogo" class="hide"></a></a>
+                <a class="navbar-brand hide" id="blacklogo" href="#head"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#list"
                     aria-controls="list" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -52,55 +52,13 @@
     </header>
 
     <section class="pics-features">
-        <div class="container-fluid">
+        <div class="container-fluid" id="catPics">
             <div class="row justify-content-center">
                 <h2 id="pics">Are you ready for cuteness ?!</h2>
             </div>
-            <div class="row">
-                <div class="col">
-                    <figure class="cat-pic">
-                        <img src="./images/1.jpg" alt="cat1">
-                    </figure>
-                </div>
-                <div class="col">
-                    <figure class="cat-pic">
-                        <img src="./images/2.jpg" alt="cat2">
-                    </figure>
-                </div>
-                <div class="col">
-                    <figure class="cat-pic">
-                        <img src="./images/3.jpg" alt="cat3">
-                    </figure>
-                </div>
-                <div class="col">
-                    <figure class="cat-pic">
-                        <img src="./images/4.jpg" alt="cat4">
-                    </figure>
-                </div>
-                
-                <div class="row">
-                    <div class="col">
-                        <figure class="cat-pic">
-                            <img src="./images/1.jpg" alt="cat1">
-                        </figure>
-                    </div>
-                    <div class="col">
-                        <figure class="cat-pic">
-                            <img src="./images/2.jpg" alt="cat2">
-                        </figure>
-                    </div>
-                    <div class="col">
-                        <figure class="cat-pic">
-                            <img src="./images/3.jpg" alt="cat3">
-                        </figure>
-                    </div>
-                    <div class="col">
-                        <figure class="cat-pic">
-                            <img src="./images/4.jpg" alt="cat4">
-                        </figure>
-                    </div>
-                </div>
+            <div class="container-fluid pt-2" id="catsList">
             </div>
+        </div>
     </section>
 
     <section>
