adoption flow fully coded

--- a/KittyHaven/index.html
+++ b/KittyHaven/index.html
@@ -64,7 +64,7 @@
     <section>
         <div class="container">
             <div class="row justify-content-center">
-                <a class="button btnAni" href="#">Ready to adopt?!</a>
+                <a class="button btnAni" href="./pages/adoptList.php">Ready to adopt?!</a>
             </div>
         </div>
     </section>
