--- a/KittyHaven/index.html
+++ b/KittyHaven/index.html
@@ -10,9 +10,10 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="icon" href="./favicons/favicon.ico">
 
-    <link href="./include/animate.css" rel="stylesheet">
-    <link href="./include/landing.css" rel="stylesheet">
+    <link href="./include/CSS/animate.css" rel="stylesheet">
+    <link href="./include/CSS/landing.css" rel="stylesheet">
 
     <title>Kitty Planet</title>
 
@@ -88,8 +89,8 @@
         crossorigin="anonymous"></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script language="JavaScript" type="text/javascript" src="include/jquery.waypoints.min.js"></script>
-    <script language="JavaScript" type="text/javascript" src="include/landing.js"></script>
+    <script language="JavaScript" type="text/javascript" src="./include/SCRIPTS/jquery.waypoints.min.js"></script>
+    <script language="JavaScript" type="text/javascript" src="./include/SCRIPTS/landing.js"></script>
 
 </body>
 
