fixed titles and bug fixing

--- a/KittyHaven/index.html
+++ b/KittyHaven/index.html
@@ -15,7 +15,7 @@
     <link href="./include/animate.css" rel="stylesheet">
     <link href="./include/landing.css" rel="stylesheet">
 
-    <title>Kitty Planet</title>
+    <title>Kitty Haven</title>
 
 </head>
 
