--- a/Exercises/Ex2/index.html
+++ b/Exercises/Ex2/index.html
@@ -23,7 +23,7 @@
                 <a href="./exercises/ex4/index.html" target="_blank">Ex4 - Form</a>
                 <a href="./exercises/ex4/login.html" target="_blank">Ex4 - Login</a>
                 <a href="./exercises/ex4/terminal.html" target="_blank">Ex4 - Contest</a>
-                <a href="./KittyHaven/index.html" target="_blank">KittyHaven</a>
+                <a href="./KittyHaven/index.html" target="_blank">Final Project - KittyHaven</a>
                 <a href="https://github.com/fadiatamny" target="_blank">Github</a>
             </nav>
     
