--- a/KittyHaven/index.html
+++ b/KittyHaven/index.html
@@ -40,7 +40,7 @@
                             <a class="nav-link " href="./pages/login.php">Login</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About us</a>
+                            <a class="nav-link" href="./pages/aboutus.php">About us</a>
                         </li>
                     </ul>
                 </div>
